UI overflow fix

--- a/frontend/src/app/Components/replychild/replychild.component.scss
+++ b/frontend/src/app/Components/replychild/replychild.component.scss
@@ -3,7 +3,7 @@
 }
 
 div{
-	white-space: pre-wrap;
+	white-space: pre-line;
 }
 
 .replyBlockContainer{
