--- a/frontend/src/app/Components/threadwrapper/threadwrapper.component.scss
+++ b/frontend/src/app/Components/threadwrapper/threadwrapper.component.scss
@@ -17,6 +17,7 @@
     height: 100%;
     width: 100%;
     overflow-y: auto;
+	overflow-x: hidden;
     // hide scrollbar
     -ms-overflow-style: none;
     /* IE and Edge */
